added new frontend resume

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <div class="inner">
         <ul class="icons">
           <li>
-            <a href="assets/pdfs/Resume.pdf" class="icon solid fa-file-csv" target="_blank"
+            <a href="assets/pdfs/FE_Resume.pdf" class="icon solid fa-file-csv" target="_blank"
               ><span class="label">Resume</span></a
             >
           </li>
