update resume button on about me section

--- a/index.html
+++ b/index.html
@@ -32,19 +32,12 @@
           <h2>About Me</h2>
         </header>
         <p>
-          While working as a sales representative, I got interested in programming,
-          first learning about HTML and CSS. Seeing a website come to life
-          just from some lines of code, blew my mind. I was hooked. Enrolling
-          at Flatiron School, allowed me to develop the skills and knowledge to become a
-          developer. Through the course, I have gained and expanded my knowledge
-          in HTML, CSS, Javascript, Ruby on Rails, and React. I have
-          greatly enjoyed my time learning so far, and look forward to
-          continuing to further my skills as I develop as programmer.
+          While working as a sales representative, I got interested in programming, first learning about HTML and CSS. Seeing a website come to life just from some lines of code, blew my mind. I was hooked. Enrolling at Flatiron School, allowed me to develop the skills and knowledge to become a developer. Through the course, I have gained and expanded my knowledge in HTML, CSS, Javascript, Ruby on Rails, and React. I have greatly enjoyed my time learning so far and look forward to continuing to further my skills as I develop as a programmer.
         </p>
 
         <ul class="actions">
           <li>
-            <a href="assets/pdfs/Resume.pdf" class="button">Resume</a>
+            <a href="assets/pdfs/FE_Resume.pdf" class="button" target="_blank">Resume</a>
           </li>
         </ul>
       </section>
