--- a/index.html
+++ b/index.html
@@ -56,32 +56,8 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/wine-corks.jpg" class="image fit thumb">
-              <img src="images/wine-corks.jpg" alt=""
-            /></a>
-            <h3>Wine Journal</h3>
-            <p>Journal to record wine details.</p>
-            <br />
-            <button>
-              <a
-                href="https://github.com/mmtakeuchi/wine-client"
-                target="_blank"
-                class="button"
-                >Github</a
-              >
-            </button>
-            <button>
-              <a
-                href="https://wine-journal-client.herokuapp.com/"
-                target="_blank"
-                class="button"
-                >Website</a
-              >
-            </button>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/film_background.jpg" class="image fit thumb"
-              ><img src="images/film_background.jpg" alt=""
+            <a href="images/film.jpg" class="image fit thumb"
+              ><img src="images/film.jpg" alt="" class="preview"
             /></a>
             <h3>BoxPlus</h3>
             <p>Lookup details for Movies and TV Shows.</p>
@@ -104,14 +80,14 @@
             </button>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/meals.jpg" class="image fit thumb"
-              ><img src="images/meals.jpg" alt=""
+            <a href="images/food-table.jpg" class="image fit thumb"
+              ><img src="images/food-table.jpg" alt="" class="preview"
             /></a>
             <h3>Meals Lookup</h3>
             <p>
               Lookup a variety of meals by name, category, or starting letter.
             </p>
-			<br />
+			      <br />
             <button>
               <a
                 href="https://github.com/mmtakeuchi/meals-db"
@@ -130,8 +106,32 @@
             </button>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/golf-bird-view.jpg" class="image fit thumb"
-              ><img src="images/golf-bird-view.jpg" alt=""
+            <a href="images/wine-pour.jpg" class="image fit thumb">
+              <img src="images/wine-pour.jpg" alt="" class="preview"
+            /></a>
+            <h3>Wine Journal</h3>
+            <p>Journal to record wine details.</p>
+            <br />
+            <button>
+              <a
+                href="https://github.com/mmtakeuchi/wine-client"
+                target="_blank"
+                class="button"
+                >Github</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://wine-journal-client.herokuapp.com/"
+                target="_blank"
+                class="button"
+                >Website</a
+              >
+            </button>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/golf.jpg" class="image fit thumb"
+              ><img src="images/golf.jpg" alt="" class="preview"
             /></a>
             <h3>Social Golf</h3>
             <p>
@@ -158,7 +158,7 @@
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/country-flags.jpg" class="image fit thumb"
-              ><img src="images/country-flags.jpg" alt=""
+              ><img src="images/country-flags.jpg" alt="" class="preview"
             /></a>
             <h3>Country Flags</h3>
             <p>Look at detailed country information, with the ability to search countries and filter by region.</p>
@@ -182,7 +182,7 @@
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/sky_background.jpg" class="image fit thumb"
-              ><img src="images/sky_background.jpg" alt=""
+              ><img src="images/sky_background.jpg" alt="" class="preview"
             /></a>
             <h3>React Weather</h3>
             <p>Weather app displaying current and 5-day forecast.</p>
@@ -206,7 +206,7 @@
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/backbar.jpg" class="image fit thumb"
-              ><img src="images/backbar.jpg" alt=""
+              ><img src="images/backbar.jpg" alt="" class="preview"
             /></a>
             <h3>Cocktails CLI</h3>
             <p>Search different cocktails from the terminal</p>
