--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <ul class="actions">
           <li>
-            <a href="assets/pdfs/FE_Resume.pdf" class="button" target="_blank">Resume</a>
+            <a href="assets/pdfs/Michael-Takeuchi_FE-Resume.pdf" class="button" target="_blank">Resume</a>
           </li>
         </ul>
       </section>
@@ -295,7 +295,7 @@
       <div class="inner">
         <ul class="icons">
           <li>
-            <a href="assets/pdfs/FE_Resume.pdf" class="icon solid fa-file-csv" target="_blank"
+            <a href="assets/pdfs/Michael-Takeuchi_FE-Resume.pdf" class="icon solid fa-file-csv" target="_blank"
               ><span class="label">Resume</span></a
             >
           </li>
