--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
+            <a href="images/coffee.jpg" class="image fit thumb"
+              ><img src="images/coffee.jpg" alt="" class="preview"
+            /></a>
+            <h3>Coffee Shop</h3>
+            <p>Coffee E-Commerce site.</p>
+			      <br />
+            <button>
+              <a
+                href="https://github.com/mmtakeuchi/coffeeMERN"
+                target="_blank"
+                class="button"
+                >Github</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://radiant-plateau-95041.herokuapp.com/"
+                target="_blank"
+                class="button"
+                >Website</a
+              >
+            </button>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
             <a href="images/film.jpg" class="image fit thumb"
               ><img src="images/film.jpg" alt="" class="preview"
             /></a>
