changed react weather to react typescript weather app

--- a/index.html
+++ b/index.html
@@ -104,6 +104,30 @@
             </button>
           </article>
           <article class="col-6 col-12-xsmall work-item">
+            <a href="images/sky_background.jpg" class="image fit thumb"
+              ><img src="images/sky_background.jpg" alt="" class="preview"
+            /></a>
+            <h3>React Type Weather</h3>
+            <p>Weather app displaying current and 5-day forecast.</p>
+			<br />
+            <button>
+              <a
+                href="https://github.com/mmtakeuchi/type-weather"
+                target="_blank"
+                class="button"
+                >Github</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://react-type-weather.netlify.app/"
+                target="_blank"
+                class="button"
+                >Website</a
+              >
+            </button>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
             <a href="images/food-table.jpg" class="image fit thumb"
               ><img src="images/food-table.jpg" alt="" class="preview"
             /></a>
@@ -198,30 +222,6 @@
             <button>
               <a
                 href="https://country-flags-react.netlify.app/"
-                target="_blank"
-                class="button"
-                >Website</a
-              >
-            </button>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/sky_background.jpg" class="image fit thumb"
-              ><img src="images/sky_background.jpg" alt="" class="preview"
-            /></a>
-            <h3>React Weather</h3>
-            <p>Weather app displaying current and 5-day forecast.</p>
-			<br />
-            <button>
-              <a
-                href="https://github.com/mmtakeuchi/react_weather"
-                target="_blank"
-                class="button"
-                >Github</a
-              >
-            </button>
-            <button>
-              <a
-                href="https://weather-react-front.netlify.app/"
                 target="_blank"
                 class="button"
                 >Website</a
