--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Strata by HTML5 UP</title>
+    <title>Michael Takeuchi Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
