add guess hooper app

--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
+            <a href="images/mystery-hooper.jpeg" class="image fit thumb"
+              ><img src="images/mystery-hooper.jpeg" alt="" class="preview"
+            /></a>
+            <h3>Guess Hooper</h3>
+            <p>NBA layer uessing game</p>
+			      <br />
+            <button>
+              <a
+                href="https://github.com/mmtakeuchi/guess-hooper"
+                target="_blank"
+                class="button"
+                >Github</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://guess-hooper.netlify.app/"
+                target="_blank"
+                class="button"
+                >Website</a
+              >
+            </button>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
             <a href="images/coffee.jpg" class="image fit thumb"
               ><img src="images/coffee.jpg" alt="" class="preview"
             /></a>
@@ -243,7 +267,7 @@
                 >Github</a
               >
             </button>
-            
+
           </article>
         </div>
         <!-- <ul class="actions">
