change guess hooper image

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <h2>Recent Work</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/mystery-hooper.jpeg" class="image fit thumb"
-              ><img src="images/mystery-hooper.jpeg" alt="" class="preview"
+            <a href="images/basketball-court.jpg" class="image fit thumb"
+              ><img src="images/basketball-court.jpg" alt="" class="preview"
             /></a>
             <h3>Guess Hooper</h3>
             <p>NBA layer uessing game</p>
